[utils] thread-pool v1.0
Signed-off-by: Jian.Cui <cuijianjoy@126.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,13 +11,17 @@ project(utils)
 
 set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
 
-set (Tutorial_VERSION_MAJOR 1)
-set (Tutorial_VERSION_MINOR 0)
-
-ADD_DEFINITIONS("-Wall -g -DDEBUG")
-ADD_SUBDIRECTORY(package)
-#ADD_SUBDIRECTORY(src)
-ADD_SUBDIRECTORY(test)
+set(Tutorial_VERSION_MAJOR 1)
+set(Tutorial_VERSION_MINOR 0)
 
 set(CMAKE_BUILD_TYPE Debug CACHE STRING "set build type to debug")
 set(CMAKE_VERBOSE_MAKEFILE on)
+
+ADD_DEFINITIONS("-std=c++11")
+
+ADD_DEFINITIONS("-Wall -g -DDEBUG")
+ADD_SUBDIRECTORY(package)
+ADD_SUBDIRECTORY(src)
+ADD_SUBDIRECTORY(test)
+ADD_SUBDIRECTORY(common)
+
