[src/image] parse bmp format
Signed-off-by: Jian.Cui <cuijianjoy@126.com>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,6 @@
 AUX_SOURCE_DIRECTORY(thread-pool DIR_SRC)
 AUX_SOURCE_DIRECTORY(system-monitor DIR_SRC)
+AUX_SOURCE_DIRECTORY(image DIR_SRC)
 
 ADD_LIBRARY(utils ${DIR_SRC})
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/common)
