--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -22,6 +22,12 @@ target_link_libraries(proc_test utils log)
 
 add_subdirectory(thread_pool)
 
+include_directories(${CMAKE_SOURCE_DIR}/src)
+AUX_SOURCE_DIRECTORY(image/ IMAGE_TEST_SRC)
+add_executable(image_test ${IMAGE_TEST_SRC})
+target_link_libraries(image_test utils log)
+
+
 
 
 
