[live555] play the video file
Signed-off-by: Olin <cuijianjoy@126.com>

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,19 +1,9 @@
 
-message("cmake_module_path: ${CMAKE_MODULE_PATH}")
+ADD_DEFINITIONS("-Wall -g -DDEBUG")
 
-find_package(googletest)
-
-if(GOOGLETEST_FOUND)
-        message("googletest header:" ${googletest_INCLUDE_DIR})
-        message("googletest library:" ${googletest_LIBRARY})
-        include_directories(${googletest_INCLUDE_DIR})
-        AUX_SOURCE_DIRECTORY(unittest/ TEST_FILE)
-        add_executable(unittest ${TEST_FILE})
-        target_link_libraries(unittest ${googletest_LIBRARY} pthread)
-        add_dependencies(unittest build_googletest)
-else()
-        message("not found GOOGLETEST_FOUND")
-endif(GOOGLETEST_FOUND)
+AUX_SOURCE_DIRECTORY(unittest/ TEST_FILE)
+add_executable(unittest ${TEST_FILE})
+target_link_libraries(unittest gtest pthread)
 
 include_directories(${CMAKE_SOURCE_DIR}/common)
 include_directories(${CMAKE_SOURCE_DIR}/src/system-monitor)
@@ -27,7 +17,13 @@ AUX_SOURCE_DIRECTORY(image/ IMAGE_TEST_SRC)
 add_executable(image_test ${IMAGE_TEST_SRC})
 target_link_libraries(image_test utils log)
 
-
+aux_source_directory(live555 LIVE_TEST_SRC)
+add_executable(live ${LIVE_TEST_SRC})
+include_directories(/usr/local/include/BasicUsageEnvironment)
+include_directories(/usr/local/include/groupsock)
+include_directories(/usr/local/include/liveMedia)
+include_directories(/usr/local/include/UsageEnvironment)
+target_link_libraries(live liveMedia BasicUsageEnvironment groupsock UsageEnvironment)
 
 
 
