--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,7 @@
 AUX_SOURCE_DIRECTORY(thread-pool DIR_SRC)
 AUX_SOURCE_DIRECTORY(system-monitor DIR_SRC)
 AUX_SOURCE_DIRECTORY(image DIR_SRC)
+AUX_SOURCE_DIRECTORY(image camera)
 
 ADD_LIBRARY(utils ${DIR_SRC})
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/common)
