[src] parse nalu from h264
Signed-off-by: Olin <cuijianjoy@126.com>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,7 +1,11 @@
 AUX_SOURCE_DIRECTORY(thread-pool DIR_SRC)
 AUX_SOURCE_DIRECTORY(system-monitor DIR_SRC)
 AUX_SOURCE_DIRECTORY(image DIR_SRC)
-AUX_SOURCE_DIRECTORY(image camera)
+AUX_SOURCE_DIRECTORY(camera DIR_SRC)
+AUX_SOURCE_DIRECTORY(media DIR_SRC)
 
 ADD_LIBRARY(utils ${DIR_SRC})
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/common)
+
+
+add_subdirectory(unittest)
