--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -12,3 +12,4 @@ add_subdirectory(live555)
 add_subdirectory(camera)
 add_subdirectory(librtmp)
 add_subdirectory(ffmpeg)
+add_subdirectory(sqlite3)
