--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -13,3 +13,4 @@ add_subdirectory(camera)
 add_subdirectory(librtmp)
 add_subdirectory(ffmpeg)
 add_subdirectory(sqlite3)
+add_subdirectory(network)
