--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,6 +5,7 @@ AUX_SOURCE_DIRECTORY(system-monitor DIR_SRC)
 AUX_SOURCE_DIRECTORY(image DIR_SRC)
 AUX_SOURCE_DIRECTORY(camera DIR_SRC)
 AUX_SOURCE_DIRECTORY(media DIR_SRC)
+AUX_SOURCE_DIRECTORY(io DIR_SRC)
 
 ADD_LIBRARY(utils ${DIR_SRC})
 
