--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -14,3 +14,4 @@ add_subdirectory(librtmp)
 add_subdirectory(ffmpeg)
 add_subdirectory(sqlite3)
 add_subdirectory(network)
+add_subdirectory(share-memory)
