[test] ssl server and client demo
Signed-off-by: Olin <cuijianjoy@126.com>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,6 +6,7 @@ AUX_SOURCE_DIRECTORY(image DIR_SRC)
 AUX_SOURCE_DIRECTORY(camera DIR_SRC)
 AUX_SOURCE_DIRECTORY(media DIR_SRC)
 AUX_SOURCE_DIRECTORY(io DIR_SRC)
+AUX_SOURCE_DIRECTORY(redblack-tree DIR_SRC)
 
 ADD_LIBRARY(utils ${DIR_SRC})
 
