--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -15,3 +15,4 @@ add_subdirectory(ffmpeg)
 add_subdirectory(sqlite3)
 add_subdirectory(network)
 add_subdirectory(share-memory)
+add_subdirectory(ssl)
