[design-patterns] singleton
Signed-off-by: Olin <cuijianjoy@126.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,7 @@ set(CMAKE_VERBOSE_MAKEFILE on)
 ADD_DEFINITIONS("-std=c++11")
 
 ADD_DEFINITIONS("-Wall -g -DDEBUG")
+ADD_SUBDIRECTORY(design-patterns)
 ADD_SUBDIRECTORY(src)
 ADD_SUBDIRECTORY(test)
 ADD_SUBDIRECTORY(common)
