[design-pattern] design-pattern demo
Signed-off-by: Olin <cuijianjoy@126.com>

--- a/design-patterns/CMakeLists.txt
+++ b/design-patterns/CMakeLists.txt
@@ -1,2 +1,21 @@
 ADD_SUBDIRECTORY(singleton)
 ADD_SUBDIRECTORY(prototype)
+ADD_SUBDIRECTORY(factory)
+ADD_SUBDIRECTORY(builder)
+ADD_SUBDIRECTORY(proxy)
+ADD_SUBDIRECTORY(adapter)
+ADD_SUBDIRECTORY(bridge)
+ADD_SUBDIRECTORY(decorator)
+ADD_SUBDIRECTORY(facade)
+ADD_SUBDIRECTORY(flyweight)
+ADD_SUBDIRECTORY(composite)
+ADD_SUBDIRECTORY(template)
+ADD_SUBDIRECTORY(invoker)
+ADD_SUBDIRECTORY(chainOfResponsibility)
+ADD_SUBDIRECTORY(context)
+ADD_SUBDIRECTORY(observer)
+ADD_SUBDIRECTORY(mediator)
+ADD_SUBDIRECTORY(iterator)
+ADD_SUBDIRECTORY(visitor)
+ADD_SUBDIRECTORY(memento)
+ADD_SUBDIRECTORY(expression)
