--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,9 +20,8 @@ set(CMAKE_VERBOSE_MAKEFILE on)
 ADD_DEFINITIONS("-std=c++11")
 
 ADD_DEFINITIONS("-Wall -g -DDEBUG")
-# ADD_SUBDIRECTORY(design-patterns)
-ADD_SUBDIRECTORY(driver)
-# ADD_SUBDIRECTORY(src)
-# ADD_SUBDIRECTORY(test)
-# ADD_SUBDIRECTORY(common)
+ADD_SUBDIRECTORY(design-patterns)
+ADD_SUBDIRECTORY(src)
+ADD_SUBDIRECTORY(test)
+ADD_SUBDIRECTORY(common)
 
